# telegram_ollama_bot_tokio

./: .gitignore  .woodpecker.yml  Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
