[package]
name = "telegram_ollama_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

teloxide = { version = "0.12", features = ["macros"] }

reqwest = { version = "0.12", features = ["json", "stream"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

futures-util = "0.3"

dotenvy = "0.15"

anyhow = "1"

log = "0.4"
pretty_env_logger = "0.5"
